--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,5 @@
-<footer id="intro">
-  <img src="images/janstache.png" alt="Janstache">
-  <aside>
-    <h3>Why, hello there</h3>
-    <p class="excerpt">Lorizzle ipsum bling bling sit amizzle, consectetuer adipiscing elit. Nizzle sapien velizzle, bling bling volutpat, suscipit , gravida vel, arcu. Check it out hizzle that's the shizzle. We gonna chung erizzle. Fo izzle dolor fo turpis tempizzle tempor. Gangsta boom shackalack mofo et turpizzle. Sizzle izzle tortor. Pellentesque uhuh ... yih!</p>
-  </aside>
+<footer>
+<a class="icon-twitter social" href="http://twitter.com/jannypie"></a> <a class="icon-github social" href="http://github.com/jannypie"></a> <a class="icon-linkedin social" href="http://github.com/jannypie"></a>
 </footer>
 
 <!-- The jQuery and scripts -->
