--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 <!-- The Links -->
 <link rel="canonical" href="{{ page.url | canonical }}" />
 <link href="/css/main.css" rel="stylesheet">
+<link rel="stylesheet" href="/css/fontello.css">
 <!-- Link placeholder to change stylesheets -->
 <link class="style" href="" rel="stylesheet">
 
