--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	{% include head.html %}
-		<body class="home">
+		<body class="page">
 			{% include header.html %}
-			{% include nav.html %}
 			<main class="container">
 				{{ content }}
 			</main><!-- /container -->
