--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,17 +3,13 @@
 	{% include head.html %}
 		<body>
 					{% include header.html %}
-			<div class="container">
-			<div class="container-overlay">
+			<main class="container">
 				{% include nav.html %}
 				<div class="content-wrap">
-					<div class="page-wrap">
 						<h1> {{ page.title }} </h1>
 						{{ content }}
-					</div>
 					{% include footer.html %}
 				</div> <!-- /content-wrap -->
-			</div><!--/container-overlay-->
-			</div><!-- /container -->
+			</main><!-- /container -->
 		</body>
 </html>
