--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <nav>
   <ul class="short">
-    <li><a href="{{ site.url }}#intro">Introduction</a></li>
+    <li><a href="#intro">Introduction</a></li>
     <li><a href="#writings">Writings</a></li>
     <li><a href="#works">Works</a></li>
   </ul>
   <ul class="expanded">
-    <li><a href="#intro">Introduction</a></li>
+    <li><a href="/#intro">Introduction</a></li>
     <li><a href="{{ site.url }}/blog">DevBootcamp Blog</a></li>
     <li>Web Portfolio:
       <ul>
