--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <nav>
   <ul class="short">
-    <li><a href="#intro">Introduction</a></li>
-    <li><a href="#writings">Writings</a></li>
-    <li><a href="#works">Works</a></li>
+    <li><a href="http://jannypie.github.io#intro">Introduction</a></li>
+    <li><a href="http://jannypie.github.io#writings">Writings</a></li>
+    <li><a href="http://jannypie.github.io#works">Works</a></li>
   </ul>
   <ul class="expanded">
     <li><a href="/#intro">Introduction</a></li>
