--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,3 +15,4 @@
 
 <link rel="shortcut icon" href="/favicon.ico">
 <link href='http://fonts.googleapis.com/css?family=Numans|Scada:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Average' rel='stylesheet' type='text/css'>
