--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,14 +5,17 @@
 <meta name="author" content="Jan Dennison">
 <meta name="robots" content="{{ page.meta-robots }}" />
 <meta name="description" content="{{ page.meta-description }}" />
+<link rel="canonical" href="{{ page.url | canonical }}" />
 
 <!-- The Links -->
-<link rel="canonical" href="{{ page.url | canonical }}" />
+<link rel="shortcut icon" href="/favicon.ico">
 <link href="/css/main.css" rel="stylesheet">
-<link rel="stylesheet" href="/css/fontello.css">
+
 <!-- Link placeholder to change stylesheets -->
 <link class="style" href="" rel="stylesheet">
-
-<link rel="shortcut icon" href="/favicon.ico">
+<!-- Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Numans|Scada:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Average' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/css/fontello.css">
+<!-- Highlight Code Syntax -->
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
