--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,6 @@
 <header>
+    <!-- <div class="geometric"></div> -->
     {% include nav.html %}
-<!--     <div class="geometric">
-      <div class="shape one"></div>
-      <div class="shape two"></div>
-      <div class="shape three"></div>
-    </div> -->
     <h1>
       <a href="{{ site.url }}" rel="bookmark" title="Jan Dennison">Jan Dennison</a>
     </h1>
