--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 <link href="/css/main.css" rel="stylesheet">
 
 <!-- Link placeholder to change stylesheets -->
-<link class="style" href="" rel="stylesheet">
+<link class="style" href="#" rel="stylesheet">
 <!-- Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Numans|Scada:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Average' rel='stylesheet' type='text/css'>
