--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-<a class="icon-twitter social" href="http://twitter.com/jannypie"></a> <a class="icon-github social" href="http://github.com/jannypie"></a> <a class="icon-linkedin social" href="http://github.com/jannypie"></a>
+<a class="icon-twitter social" href="http://twitter.com/jannypie"><span class="accessible">Twitter</span></a> <a class="icon-github social" href="http://github.com/jannypie"><span class="accessible">GitHub</span></a> <a class="icon-linkedin social" href="http://linkedin.com/in/jldennison/"><span class="accessible">LinkedIn</span></a>
 </footer>
 
 <!-- The jQuery and scripts -->
