--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <!-- <div class="geometric"></div> -->
     {% include nav.html %}
     <h1>
-      <a href="{{ site.url }}" rel="bookmark" title="Jan Dennison">Jan Dennison</a>
+      <a href="{{ site.url }}" rel="bookmark" title="Website for Jan Dennison">Jan Dennison</a>
     </h1>
     <p>Front End Developer</p>
 </header>
