--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@
     <body class="home">
       {% include header.html %}
       <aside id="intro">
-        <div class="container column-me">
+        <div class="container">
           <img class="noborder" src="images/janstache.png" alt="Janstache">
           <div>
-            <h3>Why, hello there.</h3>
+            <h2>Why, hello there.</h2>
             <p class="excerpt">Lorizzle ipsum bling bling sit amizzle, consectetuer adipiscing elit. Nizzle sapien velizzle, bling bling volutpat, suscipit , gravida vel, arcu. Check it out hizzle that's the shizzle. We gonna chung erizzle. Fo izzle dolor fo turpis tempizzle tempor. Gangsta boom shackalack mofo et turpizzle. Sizzle izzle tortor. Pellentesque uhuh ... yih!</p>
           </div>
         </div>
