--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,16 @@
+<!--
+              , ,
+________  ___/ /  __________
+  )_   (  `-, )   )    _(
+    )_  \__/ /___/   _(
+      )____   ______(
+           )  )
+           ( (
+            ))
+           ((  HERE BE DRAGONS
+            ``_,
+ -->
 
-<!-- Meta meta -->
 <meta charset="utf-8">
 <title>{{ page.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
