--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@ _________,   ___/ /  ,__________
 <!-- The Links -->
 <link rel="shortcut icon" href="favicon.ico">
 <link href="/css/main.css" rel="stylesheet">
+<link href="/css/hexagon.css" rel="stylesheet">
 
 <!-- Link placeholder to change stylesheets -->
 <link class="style" href="#" rel="stylesheet">
