--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
       {% include header.html %}
       <aside id="intro">
         <div class="container">
-          <img class="noborder" src="images/janstache.png" alt="Janstache">
+          <img class="hexagon" src="images/janstache.png" alt="Janstache">
           <div>
             <h2>Why, hello there.</h2>
             <p class="excerpt">Lorizzle ipsum bling bling sit amizzle, consectetuer adipiscing elit. Nizzle sapien velizzle, bling bling volutpat, suscipit , gravida vel, arcu. Check it out hizzle that's the shizzle. We gonna chung erizzle. Fo izzle dolor fo turpis tempizzle tempor. Gangsta boom shackalack mofo et turpizzle. Sizzle izzle tortor. Pellentesque uhuh ... yih!</p>
