--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header>
-    <!-- <div class="geometric"></div> -->
     {% include nav.html %}
     <h1>
       <a href="{{ site.url }}" rel="bookmark" title="Website for Jan Dennison">Jan Dennison</a>
     </h1>
-    <p>Front End Developer</p>
+    <p class="subtitle">Front End Developer</p>
 </header>
