--- a/_includes/hexagon.html
+++ b/_includes/hexagon.html
@@ -2,17 +2,11 @@
   <ul class="hexagonal">
     <!-- row 1 -->
     <li class="spacer"></li>
+    <li><div></div></li>
     <li>
       <div>
-        <a href="{{ site.url }}/blog">
-          <h4>DevBootcamp Blog</h4>
-        </a>
-      </div>
-    </li>
-    <li>
-      <div>
-        <h4>Web Works</h4>
-        <ul>
+        <h4 class="hex-top">Web Works:</h4>
+        <ul class="hex-bot">
           <li><a href="http://codepen.io/jannypie/pen/kbdDg" title="Taj Majal code sample on codepen">Pure CSS Taj Mahal</a></li>
           <li><a href="http://codepen.io/jannypie/pen/lFysn" title="Bridge code sample on codepen">Pure CSS Golden Gate</a></li>
           <li><a href="http://codepen.io/jannypie/pen/DcHdo" title="Quizzie in CSS/JS">Quizzie in CSS/JS</a></li>
@@ -24,8 +18,8 @@
     <li class="spacer"><div></div></li>
     <li>
       <div>
-        <h4>Art Works:</h4>
-        <ul>
+        <h4 class="hex-top">Art Works:</h4>
+        <ul class="hex-bot">
           <li><a href="{{ site.url }}/art-portfolio/verisimilitude-sylva/">Verisimilitude Sylva</a></li>
           <li><a href="{{ site.url }}/art-portfolio/wanderlust/">Wanderlust</a></li>
         </ul>
