--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,5 @@
     <h1>
       <a href="{{ site.url }}" rel="bookmark" title="Website for Jan Dennison">Jan Dennison</a>
     </h1>
-    <p class="subtitle">Front End Developer</p>
+    <h4 class="subtitle">Web Developer</h4>
 </header>
