--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,8 +5,8 @@
     <li><a href="{{ site.url }}#works">Works</a></li>
   </ul>
   <ul class="expanded">
-    <li><a href="{{ site.url }}#intro">Introduction</a></li>
-    <li><a href="{{ site.url }}/blog">DevBootcamp Blog</a></li>
+    <li><a href="{{ site.url }}#intro">Hellos</a></li>
+    <li><a href="{{ site.url }}/blog">Writings</a></li>
     <li>Web Works:
       <ul>
         <li><a href="http://codepen.io/jannypie/pen/kbdDg" title="Taj Majal code sample on codepen">Pure CSS Taj Mahal</a></li>
