custom responsive grid

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,25 +1,7 @@
 <nav>
-  <ul class="short">
-    <li><a href="{{ site.url }}#intro">Introduction</a></li>
-    <li><a href="{{ site.url }}#writings">Writings</a></li>
-    <li><a href="{{ site.url }}#works">Works</a></li>
-  </ul>
-  <ul class="expanded">
+  <ul>
     <li><a href="{{ site.url }}#intro">Hellos</a></li>
-    <li><a href="{{ site.url }}/blog">Writings</a></li>
-    <li>Web Works:
-      <ul>
-        <li><a href="http://codepen.io/jannypie/pen/kbdDg" title="Taj Majal code sample on codepen">Pure CSS Taj Mahal</a></li>
-        <li><a href="http://codepen.io/jannypie/pen/lFysn" title="Bridge code sample on codepen">Pure CSS Golden Gate</a></li>
-        <li><a href="http://codepen.io/jannypie/pen/DcHdo" title="Quizzie in CSS/JS">Quizzie in CSS/JS</a></li>
-        <li><a href="{{ site.url }}/cheat-sheet.html" title="JSON Cheat Sheet">JSON Cheat Sheet</a></li>
-      </ul>
-    </li>
-    <li>Art Works:
-      <ul>
-        <li><a href="{{ site.url }}/art-portfolio/verisimilitude-sylva/">Verisimilitude Sylva</a></li>
-        <li><a href="{{ site.url }}/art-portfolio/wanderlust/">Wanderlust</a></li>
-      </ul>
-    </li>
+    <li><a href="{{ site.url }}#writings">Writings</a></li>
+    <li><a href="{{ site.url }}#works">Workings</a></li>
   </ul>
 </nav>
