--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,15 +3,17 @@
   {% include head.html %}
     <body class="home">
       {% include header.html %}
-      <aside id="intro">
+      <section id="intro">
         <div class="container">
-          <img class="hexagon" src="images/janstache.png" alt="Janstache">
-          <div>
+          <div class="col-third">
+            <img class="hexagon column-third--left" src="images/janstache.png" alt="Janstache">
+          </div>
+          <div class="col-twothird">
             <h2>Why, hello there.</h2>
             <p class="excerpt">Lorizzle ipsum bling bling sit amizzle, consectetuer adipiscing elit. Nizzle sapien velizzle, bling bling volutpat, suscipit , gravida vel, arcu. Check it out hizzle that's the shizzle. We gonna chung erizzle. Fo izzle dolor fo turpis tempizzle tempor. Gangsta boom shackalack mofo et turpizzle. Sizzle izzle tortor. Pellentesque uhuh ... yih!</p>
           </div>
         </div>
-      </aside>
+      </section>
       <main class="container">
         {{ content }}
       </main><!-- /container -->
