--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,6 +12,10 @@ header {
 header {
   background-image: url(/images/field-bg-480.jpg);
 }
+header h1 {
+  margin-top: 50%;
+  font-size: 3em;
+}
 header h1 a, header h1 a:visited {
   color: whitesmoke;
   border-bottom: 0;
@@ -21,14 +25,10 @@ header a:hover, nav a:hover {
   text-decoration: none;
   background-color: transparent;
 }
-header h1 {
-  margin-top: 50%;
-  font-size: 3em;
-}
 header .subtitle {
   display: inline-block;
   background: rgba(250,250,250,0.8);
-  padding: 0.3em 1em 0.25em;
+  padding: 0.5em 1em;
   margin: 0 auto;
   color: #464f61;
   font-size: 1.5em;
