--- a/_sass/_articles.scss
+++ b/_sass/_articles.scss
@@ -1,5 +1,6 @@
-article {
-  overflow: auto;
-  margin-bottom: 3em;
-  padding: 1em 2em;
+.featured-post, .featured-project {
+  margin-bottom: 4em;
+}
+.featured-post p, .featured-project p {
+  margin-top: 0;
 }
