--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -15,11 +15,11 @@ header {
 header h1 {
   margin-top: 50%;
   font-size: 3em;
+  text-shadow: 0px 0px 2px rgba(200,200,200,0.8);
 }
 header h1 a, header h1 a:visited {
   color: whitesmoke;
   border-bottom: 0;
-  text-shadow: 0px 0px 2px rgba(150,150,150, 1);
 }
 header a:hover, nav a:hover {
   text-decoration: none;
@@ -40,6 +40,6 @@ header .subtitle {
 }
 .post header h1, .page header h1 {
   margin-top: 15%;
-  font-size: 3em;
+  font-size: 5em;
   mix-blend-mode: screen;
 }
