--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -166,7 +166,7 @@ blockquote .meta, .post blockquote .meta {
   margin: 0;
 }
 
-#intro, footer {
+#intro {
   background: #737151;
   color: whitesmoke;
   overflow: auto;
