fix padding on intro

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -169,5 +169,6 @@ blockquote .meta, .post blockquote .meta {
 #intro {
   background: #737151;
   color: whitesmoke;
+  padding: 2em 0;
   overflow: auto;
 }
