fix header bg color

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,5 @@
 header {
+  background-color: #F2CA4F;
   background-image: url(/images/field-bg-480-low.png);
   background-size: cover;
   color: whitesmoke;
