--- a/_sass/_queries.scss
+++ b/_sass/_queries.scss
@@ -1,5 +1,8 @@
 
 @media only screen and (min-width: 481px) {
+  #preloader {
+    background-image: url(/images/field-bg-800.jpg);
+  }
   header {
     background-image: url(/images/field-bg-800-low.png);
   }
@@ -10,6 +13,9 @@
 }
 
 @media only screen and (min-width: 801px) {
+  #preloader {
+    background-image: url(/images/field-bg-1600.jpg);
+  }
   header {
     max-height: 100%;
     background-image: url(/images/field-bg-1600-low.png);
@@ -19,6 +25,9 @@
     }
 }
 @media only screen and (min-width: 1601px) {
+  #preloader {
+    background-image: url(/images/field-bg-3200.jpg);
+  }
   header {
     background-image: url(/images/field-bg-3200-low.png);
   }
