--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -6,7 +6,7 @@
   height: 1px;
 }
 header {
-  background: url(/images/field-bg-480-low.png) top center / cover no-repeat;
+  background: #CEB984;
   color: whitesmoke;
   text-align: center;
   margin-top: 0;
