--- a/_sass/_queries.scss
+++ b/_sass/_queries.scss
@@ -4,7 +4,7 @@
     background: url(/images/field-bg-800.jpg);
   }
   header {
-    background: url(/images/field-bg-800-low.png) top center / cover no-repeat;
+    background: #CEB984;
   }
   header h1 {
     margin-top: 30%;
@@ -18,7 +18,7 @@
   }
   header {
     max-height: 100%;
-    background: url(/images/field-bg-1600-low.png) top center / cover no-repeat;
+    background: #CEB984 top center / cover no-repeat;
   }
     header h1 {
       font-size: 5em;
@@ -29,7 +29,7 @@
     background: url(/images/field-bg-3200.jpg);
   }
   header {
-    background: url(/images/field-bg-3200-low.png) top center / cover no-repeat;
+    background: #CEB984;
   }
 }
 
