--- a/css/base.scss
+++ b/css/base.scss
@@ -20,6 +20,7 @@ $purple: #973df2;
 $light-gray: #a0a0a0;
 $gray: #414141;
 $near-black: #1a1a1a;
+$header-bg: $light-yellow;
 
 @import "grid";
 @import "main";
