--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,12 +1,6 @@
-#preloader {
-  background: url(/images/field-bg-480.jpg);
-  background-position: -9999px -9999px;
-  display: inline;
-  width: 1px;
-  height: 1px;
-}
+
 header {
-  background: #CEB984;
+  background: $header-bg url(/images/yellow-field-480.jpg) bottom center / cover;
   color: whitesmoke;
   text-align: center;
   margin-top: 0;
@@ -20,7 +14,7 @@ header {
 header h1 {
   margin-top: 50%;
   font-size: 3em;
-  text-shadow: 0px 0px 2px rgba(200,200,200,0.8);
+  text-shadow: 0px 0px 2px rgba(200, 150, 100, 0.8);
 }
 header h1 a, header h1 a:visited {
   color: whitesmoke;
