--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -167,7 +167,7 @@ blockquote .meta, .post blockquote .meta {
 }
 
 #intro {
-  background: #737151;
+  background: $teal;
   color: whitesmoke;
   padding: 2em 0;
   overflow: auto;
