--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -28,7 +28,7 @@ nav ul li:hover ul, nav ul li:focus ul {
   display: block;
 }
 nav li {
-  background: rgba(250,250,250,0.8);
+  background: rgba(250,250,250,0.7);
   color: #464f61;
   font-family: 'Scada', sans-serif;
   display: inline-block;
@@ -44,6 +44,7 @@ nav li a, nav li a:visited, nav ul li a {
   color: #464f61;
   text-decoration: none;
   border: 0;
+  font-size: 1.1em;
 }
 nav li:hover {
   background: #464f61;
