fix nav links and header on pages

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	{% include head.html %}
-		<body>
+		<body class="page">
 					{% include header.html %}
 			<main class="container">
 				{% include nav.html %}
