--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	{% include head.html %}
-		<body>
+		<body class="gallery">
 					{% include header.html %}
 			<div class="container">
 					<div class='gallery-wrap'>
